// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function.js: compiled 1`] = `
"function getGreen() {
  return \\"green\\";
}

const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: getGreen()
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

function getGreen() {
  return \\"green\\";
}

const styles = {
  bgGreen: \\"gk0_bf54id\\"
};"
`;

exports[`function.js: css 1`] = `".gk0_bf54id{background-color:green}"`;

exports[`function.js: metadata 1`] = `
Object {
  "changed": true,
  "dependencies": Array [],
}
`;

exports[`function.js: prettyCompiled 1`] = `
"function getGreen() {
  return \\"green\\";
}

const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: getGreen()
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

function getGreen() {
  return \\"green\\";
}

const styles = {
  bgGreen: \\"_bgGreen gkp15_backgroundColor_green\\"
};"
`;

exports[`import.js: compiled 1`] = `
"import * as Colors from \\"./imports/colors.es\\";

const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: Colors.GREEN
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

import * as Colors from \\"./imports/colors.es\\";
const styles = {
  bgGreen: \\"gk0_bf54id\\"
};"
`;

exports[`import.js: css 1`] = `".gk0_bf54id{background-color:green}"`;

exports[`import.js: metadata 1`] = `
Object {
  "changed": true,
  "dependencies": Array [
    "./fixtures/imports/colors.es.js",
  ],
}
`;

exports[`import.js: prettyCompiled 1`] = `
"import * as Colors from \\"./imports/colors.es\\";

const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: Colors.GREEN
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

import * as Colors from \\"./imports/colors.es\\";
const styles = {
  bgGreen: \\"_bgGreen gkp15_backgroundColor_green\\"
};"
`;

exports[`import-multiple-specifiers.js: compiled 1`] = `
"import { GREEN, RED } from \\"./imports/colors.es\\";

const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: GREEN
  },
  bgRed: {
    backgroundColor: RED
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

import { GREEN, RED } from \\"./imports/colors.es\\";
const styles = {
  bgGreen: \\"gk0_bf54id\\",
  bgRed: \\"gk0_5scuol\\"
};"
`;

exports[`import-multiple-specifiers.js: css 1`] = `
".gk0_5scuol{background-color:red}
.gk0_bf54id{background-color:green}"
`;

exports[`import-multiple-specifiers.js: metadata 1`] = `
Object {
  "changed": true,
  "dependencies": Array [
    "./fixtures/imports/colors.es.js",
  ],
}
`;

exports[`import-multiple-specifiers.js: prettyCompiled 1`] = `
"import { GREEN, RED } from \\"./imports/colors.es\\";

const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: GREEN
  },
  bgRed: {
    backgroundColor: RED
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

import { GREEN, RED } from \\"./imports/colors.es\\";
const styles = {
  bgGreen: \\"_bgGreen gkp15_backgroundColor_green\\",
  bgRed: \\"_bgRed gkp15_backgroundColor_red\\"
};"
`;

exports[`require.js: compiled 1`] = `
"const colors = require(\\"./imports/colors.cjs\\");

const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: colors.GREEN
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

const colors = require(\\"./imports/colors.cjs\\");

const styles = {
  bgGreen: \\"gk0_bf54id\\"
};"
`;

exports[`require.js: css 1`] = `".gk0_bf54id{background-color:green}"`;

exports[`require.js: metadata 1`] = `
Object {
  "changed": true,
  "dependencies": Array [
    "./fixtures/imports/colors.cjs.js",
  ],
}
`;

exports[`require.js: prettyCompiled 1`] = `
"const colors = require(\\"./imports/colors.cjs\\");

const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: colors.GREEN
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

const colors = require(\\"./imports/colors.cjs\\");

const styles = {
  bgGreen: \\"_bgGreen gkp15_backgroundColor_green\\"
};"
`;

exports[`simple-var.js: compiled 1`] = `
"const green = \\"green\\";

const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: green
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

const green = \\"green\\";
const styles = {
  bgGreen: \\"gk0_bf54id\\"
};"
`;

exports[`simple-var.js: css 1`] = `".gk0_bf54id{background-color:green}"`;

exports[`simple-var.js: metadata 1`] = `
Object {
  "changed": true,
  "dependencies": Array [],
}
`;

exports[`simple-var.js: prettyCompiled 1`] = `
"const green = \\"green\\";

const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: green
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

const green = \\"green\\";
const styles = {
  bgGreen: \\"_bgGreen gkp15_backgroundColor_green\\"
};"
`;

exports[`static.js: compiled 1`] = `
"const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: \\"green\\"
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

const styles = {
  bgGreen: \\"gk0_bf54id\\"
};"
`;

exports[`static.js: css 1`] = `".gk0_bf54id{background-color:green}"`;

exports[`static.js: metadata 1`] = `
Object {
  "changed": true,
  "dependencies": Array [],
}
`;

exports[`static.js: prettyCompiled 1`] = `
"const styles = StyleSheet.create({
  bgGreen: {
    backgroundColor: \\"green\\"
  }
});

      ↓ ↓ ↓ ↓ ↓ ↓

const styles = {
  bgGreen: \\"_bgGreen gkp15_backgroundColor_green\\"
};"
`;
